--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Personal website of Tanya Powell - Software Engineer",
   "main": "src/app.js",
   "scripts": {
+    "deploy": "master -d build",
+    "start": "ws -d public",
     "test": "npm test",
     "bundle": "browserify src/app.js -o public/js/bundle.js -t [ babelify --presets [ es2015 react ] ]"
   },
@@ -32,6 +34,8 @@
     "ecstatic": "^2.1.0",
     "eslint": "^3.7.1",
     "eslint-plugin-react": "^6.3.0",
+    "gh-pages": "^0.11.0",
+    "local-web-server": "^1.2.6",
     "react-logger": "^1.1.0",
     "watchify": "^3.7.0"
   },
