--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "deploy": "master -d build",
     "start": "ws -d public",
     "test": "npm test",
-    "bundle": "browserify src/app.js -o public/js/bundle.js -t [ babelify --presets [ es2015 react ] ]"
+    "bundle": "browserify src/app.js -o public/js/bundle.js -t [ babelify --presets [ es2015 react ] ]",
+    "uglify": "uglifyjs public/js/bundle.js -o public/js/bundle.min.js",
+    "clean-css": "cleancss -o public/styles.min.css public/styles.css",
+    "production": "npm run bundle && npm run uglify && npm run clean-css"
   },
   "repository": {
     "type": "git",
@@ -30,6 +33,7 @@
     "babel-eslint": "^7.0.0",
     "babel-preset-es2015": "^6.16.0",
     "babelify": "^7.3.0",
+    "browser-resolve": "^1.11.2",
     "browserify": "^13.1.0",
     "ecstatic": "^2.1.0",
     "eslint": "^3.7.1",
@@ -40,11 +44,15 @@
     "watchify": "^3.7.0"
   },
   "dependencies": {
+    "animate.css": "^3.5.2",
     "babel-preset-react": "^6.16.0",
+    "clean-css": "^3.4.20",
     "nodemon": "^1.11.0",
     "react": "^15.3.2",
     "react-bootstrap": "^0.30.5",
     "react-dom": "^15.3.2",
-    "react-router": "^2.8.1"
+    "react-router": "^2.8.1",
+    "react-router-bootstrap": "^0.23.1",
+    "uglify-js": "^2.7.4"
   }
 }
