--- a/package.json
+++ b/package.json
@@ -5,16 +5,8 @@
   "main": "src/app.js",
   "scripts": {
     "deploy": "gh-pages -d public",
-    "start": "ws -d public",
     "test": "npm test",
-    "bundle": "browserify src/app.js -o public/js/bundle.js -t [ babelify --presets [ es2015 react ] ]",
-    "uglify": "uglifyjs public/js/bundle.js -o public/js/bundle.min.js",
-    "clean-css": "cleancss -o public/styles.min.css public/styles.css",
-    "production": "npm run bundle && npm run uglify"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/tanyapowell/tanyapowell.github.io.git"
+    "clean-css": "cleancss -o public/styles.min.css public/styles.css"
   },
   "keywords": [
     "portfolio",
@@ -31,29 +23,36 @@
   "homepage": "https://github.com/tanyapowell/tanyapowell.github.io#readme",
   "devDependencies": {
     "babel-eslint": "^7.0.0",
-    "babel-preset-es2015": "^6.16.0",
-    "babelify": "^7.3.0",
+    "babel-preset-es2015": "^6.22.0",
     "browser-resolve": "^1.11.2",
-    "browserify": "^13.1.0",
+    "clean-css-loader": "^0.0.4",
+    "css-loader": "^0.26.1",
     "ecstatic": "^2.1.0",
     "eslint": "^3.7.1",
     "eslint-plugin-react": "^6.3.0",
+    "extract-text-webpack-plugin": "2.0.0-beta.5",
     "gh-pages": "^0.11.0",
-    "local-web-server": "^1.2.6",
+    "imagemin-webpack-plugin": "^1.4.4",
+    "node-sass": "^4.5.0",
     "react-logger": "^1.1.0",
     "sass-lint": "^1.9.1",
-    "watchify": "^3.7.0"
+    "sass-loader": "^4.1.1",
+    "style-loader": "^0.13.1",
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^1.16.3"
   },
   "dependencies": {
     "animate.css": "^3.5.2",
+    "babel-core": "^6.22.1",
+    "babel-loader": "^6.2.10",
     "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-0": "^6.22.0",
     "clean-css": "^3.4.20",
-    "nodemon": "^1.11.0",
     "react": "^15.3.2",
     "react-bootstrap": "^0.30.5",
     "react-dom": "^15.3.2",
     "react-router": "^2.8.1",
-    "react-router-bootstrap": "^0.23.1",
-    "uglify-js": "^2.7.4"
-  }
+    "react-router-bootstrap": "^0.23.1"
+  },
+  "repository": "https://github.com/tanyapowell/tanyapowell.github.io.git"
 }
