--- a/package.json
+++ b/package.json
@@ -48,10 +48,11 @@
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.22.0",
     "clean-css": "^3.4.20",
+    "history": "^4.5.1",
     "react": "^15.3.2",
     "react-bootstrap": "^0.30.5",
     "react-dom": "^15.3.2",
-    "react-router": "^2.8.1",
+    "react-router": "^3.0.2",
     "react-router-bootstrap": "^0.23.1"
   },
   "repository": "https://github.com/tanyapowell/tanyapowell.github.io.git"
