--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "react-bootstrap": "^0.30.5",
     "react-dom": "^15.3.2",
     "react-router": "^3.0.2",
-    "react-router-bootstrap": "^0.23.1"
+    "react-router-bootstrap": "^0.23.1",
+    "webpack-plugin-critical": "^1.0.0"
   },
   "repository": "https://github.com/tanyapowell/tanyapowell.github.io.git"
 }
